--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
     "http-server": "^0.9.0"
   },
   "scripts": {
-    "start": "node ./app.js"
+    "start": "node ./server/app.js"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "cfenv": "1.0.x",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "express-session": "^1.14.1",
+    "lodash": "^4.16.4",
+    "node-cache": "^4.1.0",
+    "request": "^2.75.0"
   }
 }
