--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "angular": "^1.4.0",
     "bootstrap": "^3.2.0",
     "angular-ui-router": "^0.3.1",
-    "textAngular": "^1.5.5"
+    "textAngular": "^1.5.5",
+    "angular-bootstrap": "^2.2.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
