--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "bootstrap": "^3.2.0",
     "angular-ui-router": "^0.3.1",
     "textAngular": "^1.5.5",
-    "angular-bootstrap": "^2.2.0"
+    "angular-bootstrap": "^2.2.0",
+    "angular-animate": "^1.5.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
