--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-ui-router": "^0.3.1",
     "textAngular": "^1.5.5",
     "angular-bootstrap": "^2.2.0",
-    "angular-animate": "^1.5.8"
+    "angular-animate": "^1.5.8",
+    "codemirror-ce": "^1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
